# lessons_19.2_23.2

./: data.json  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  forms.py  models.py  urls.py  views.py
main/management/commands/: fill.py
main/migrations/: 0001_initial.py  0002_student_is_active.py  0003_subject.py  0004_student_email.py
main/templates/main/: base.html  contact.html  index.html  student_confirm_delete.html  student_detail.html  student_form.html  student_list.html
main/templates/main/includes/: inc_main_menu.html
materials/: admin.py  models.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_material_is_published_material_slug_and_more.py
materials/templates/materials/: material_confirm_delete.html  material_detail.html  material_form.html  material_list.html
